--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <h1 class="name">Jessica Randall</h1>
         <h2 class="location">London, United Kingdom</h2>
         <p class="intro">"Front-end developer and avid reader."</p>
-        <div class="github">GitHub</div>
-        <div class="frontend">Frontend Mentor</div>
-        <div class="linked-in">LinkedIn</div>
-        <div class="twitter">Twitter</div>
-        <div class="insta">Instagram</div>
+        <div class="github hover">GitHub</div>
+        <div class="frontend hover">Frontend Mentor</div>
+        <div class="linked-in hover">LinkedIn</div>
+        <div class="twitter hover">Twitter</div>
+        <div class="insta hover">Instagram</div>
       </main>
     </div>
     <!-- <footer role="contentinfo">
